# plastron

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  weighting.tex
.github/workflows/: python-test.yml
plastron/: api.py  astar.py  course.py  schedule_generator.py  scraper.py  section.py
plastron/tests/: test_astar.py  test_course.py
tests/: test_api.py  test_astar.py  test_course.py  test_schedule_generator.py  test_scraper.py
