[tool.poetry]
name = "plastron"
version = "0.1.0"
description = ""
authors = [
    "Your Name <you@example.com>"
]
packages = [
    {include = "plastron"},
    {include = "tests"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["standard"] }
uvicorn = ">=0.34.0,<0.35.0"
requests = ">=2.32.3,<3.0.0"
asyncio = ">=3.4.3,<4.0.0"
aiohttp = ">=3.11.16,<4.0.0"
bs4 = ">=0.0.2,<0.0.3"
psutil = ">=7.0.0,<8.0.0"
pydantic = "^2.11.4"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-timeout = "^2.3.1"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
